--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <link rel="stylesheet" href="style.css">
   <script src="points.js"></script>
   <script src="vendor/jquery.js"></script>
-  <script src="vendor/raphael.js"></script>
   <script src="vendor/jquery.tipsy.js"></script>
+  <script src="vendor/jquery.throttle.js"></script>
+  <script src="vendor/raphael.js"></script>
   <script src="index.js"></script>
 </head>
 <body>
