--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <meta charset="utf8">
   <title>Les Stations de Métro de Montréal</title>
   <link rel="stylesheet" href="vendor/reset.css">
+  <link href="http://fonts.googleapis.com/css?family=Dosis" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="style.css">
-  <script src="points.js"></script>
+  <script src="stm.js"></script>
   <script src="vendor/jquery.js"></script>
   <script src="vendor/jquery.tipsy.js"></script>
   <script src="vendor/jquery.throttle.js"></script>
   <script src="vendor/raphael.js"></script>
+  <script src="vendor/underscore.js"></script>
   <script src="index.js"></script>
 </head>
 <body>
@@ -20,8 +22,19 @@
         <div class="banner">Les Stations de Métro de Montréal</div>
       </div>
       <div id="map"></div>
+      <div id="lines">
+        <div class="stm-line stm-orange" data-line="orange" data-station="montmorency">ride the orange line</div>
+        <hr>
+        <div class="stm-line stm-green" data-line="green" data-station="honore-beaugrand">ride the green line</div>
+        <hr>
+        <div class="stm-line stm-blue" data-line="blue" data-station="saint-michel">ride the blue line</div>
+        <hr>
+        <div class="stm-line stm-yellow" data-line="yellow" data-station="longueuil-universite-de-sherbrooke">ride the yellow line</div>
+      </div>
     </div>
+    <a id="home" href="http://www.brendanleigh.org">home</a>
     <div id="metro">click a metro station</div>
+    <div id="copyright">All photos &copy; Brendan Leigh</div>
   </div>
 </body>
 </html>
