--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
   <meta charset="utf8">
   <title>Les Stations de Métro de Montréal</title>
-  <link rel="stylesheet" href="vendor/reset.css">
+  <link rel="shortcut icon" href="/favicon16.png" sizes="16x16">
+  <link rel="icon" href="/favicon32.png" sizes="32x32">  
+  <link rel="stylesheet" href="/vendor/reset.css">
   <link href="http://fonts.googleapis.com/css?family=Dosis" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="style.css">
-  <script src="stm.js"></script>
-  <script src="vendor/jquery.js"></script>
-  <script src="vendor/jquery.tipsy.js"></script>
-  <script src="vendor/jquery.throttle.js"></script>
-  <script src="vendor/raphael.js"></script>
-  <script src="vendor/underscore.js"></script>
-  <script src="index.js"></script>
+  <link rel="stylesheet" href="/app/style.css">
+  <script src="/vendor/jquery.js"></script>
+  <script src="/vendor/jquery.tipsy.js"></script>
+  <script src="/vendor/jquery.throttle.js"></script>
+  <script src="/vendor/raphael.js"></script>
+  <script src="/vendor/underscore.js"></script>
+  <script src="/app/stm.js"></script>
+  <script src="/app/index.js"></script>
 </head>
 <body>
   <div>
