--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="utf8">
   <title>Les Stations de Métro de Montréal</title>
-  <link rel="shortcut icon" href="/favicon16.png" sizes="16x16">
-  <link rel="icon" href="/favicon32.png" sizes="32x32">  
+  <link rel="shortcut icon" href="/favicon.ico">
   <link rel="stylesheet" href="/vendor/reset.css">
   <link href="http://fonts.googleapis.com/css?family=Dosis" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="/app/style.css">
